<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.thoughts.on.java.recipes</groupId>
	<artifactId>HibernateTips</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<hibernate.version>6.6.4.Final</hibernate.version>
		<jakarta.persistence.version>3.1.0</jakarta.persistence.version>
		<junit.version>5.11.4</junit.version>
		<h2.version>2.3.232</h2.version>
		<slf4j.version>2.0.16</slf4j.version>

		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
		<build-helper-plugin.version>3.6.0</build-helper-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- JUnit 5 (Jupiter) -->
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Hibernate ORM 6 / Jakarta Persistence -->
			<dependency>
				<groupId>org.hibernate.orm</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate.orm</groupId>
				<artifactId>hibernate-jpamodelgen</artifactId>
				<version>${hibernate.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.persistence</groupId>
				<artifactId>jakarta.persistence-api</artifactId>
				<version>${jakarta.persistence.version}</version>
			</dependency>

			<!-- In-memory database for runnable tests (no external DB / Docker needed) -->
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- Logging -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4j.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<release>${maven.compiler.release}</release>
						<!-- Generate the JPA static metamodel (Xyz_ classes) -->
						<annotationProcessorPaths>
							<path>
								<groupId>org.hibernate.orm</groupId>
								<artifactId>hibernate-jpamodelgen</artifactId>
								<version>${hibernate.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>${build-helper-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>
		<module>2ndLevelCache</module>
		<module>AccessHibernateApi</module>
		<module>AssociationBidirectionalManyToMany</module>
		<module>AssociationBidirectionalManyToOne</module>
		<module>AssociationBidirectionalOneToOne</module>
		<module>AssociationUnidirectionalManyToMany</module>
		<module>AssociationUnidirectionalManyToOne</module>
		<module>AssociationUnidirectionalOneToMany</module>
		<module>AssociationUnidirectionalOneToOne</module>
		<module>AssociationsWithAttributes</module>
		<module>AttributeConverterForDateAndTime</module>
		<module>CascadePersist</module>
		<module>CheckSQLStatementCount</module>
		<module>CommentSQLStatements</module>
		<module>CriteriaConstructor</module>
		<module>CriteriaCustomFunction</module>
		<module>CriteriaDelete</module>
		<module>CriteriaQuery</module>
		<module>CriteriaQueryPagination</module>
		<module>CriteriaStandardFunction</module>
		<module>CriteriaTuples</module>
		<module>CriteriaUpdate</module>
		<module>CustomEnumerationsMapping</module>
		<module>CustomSequence</module>
		<module>DatabaseViews</module>
		<module>DateAndTime</module>
		<module>DefineTableAndSchemaName</module>
		<module>DerivedPrimaryKey</module>
		<module>EntityGraph</module>
		<module>Formula</module>
		<module>HibernateBootstrapping</module>
		<module>HibernateJoinUnassociatedEntities</module>
		<module>HibernateMultipleId</module>
		<module>HibernateNaturalId</module>
		<module>InheritanceJoined</module>
		<module>InheritanceMappedSuperclass</module>
		<module>InheritanceSingleTable</module>
		<module>InheritanceTablePerClass</module>
		<module>JPABootstrapping</module>
		<module>JPAMetamodel</module>
		<module>JPQLAdHocQuery</module>
		<module>JPQLConstructorExpression</module>
		<module>JPQLCustomFunction</module>
		<module>JPQLDelete</module>
		<module>JPQLNamedQuery</module>
		<module>JPQLScalarValues</module>
		<module>JPQLUpdate</module>
		<module>JoinFetch</module>
		<module>JpqlStandardFunction</module>
		<module>LogSQLStatements</module>
		<module>MapBasicAttributes</module>
		<module>MapEnumerations</module>
		<module>MapGeneratedColumns</module>
		<module>MapNativeQueryToEntity</module>
		<module>MapNativeQueryToPojo</module>
		<module>MapOptionalAssociations</module>
		<module>MapUtilDate</module>
		<module>NamedNativeQuery</module>
		<module>NativeQuery</module>
		<module>OrderRelationships</module>
		<module>PrePersistLifecycleEvent</module>
		<module>PrimaryKey</module>
		<module>PrimaryKeyIdentityStrategy</module>
		<module>PrimaryKeyTableStrategy</module>
		<module>PrimaryKeyUUID</module>
		<module>QueryCache</module>
		<module>QueryPagination</module>
		<module>QueryTimeout</module>
		<module>ResultsAsStreams</module>
		<module>SpringBootBootstrapping</module>
		<module>StoredProcedureQuery</module>
		<module>TransientAttributes</module>
		<module>Treat</module>
	</modules>
</project>
